--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.1.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
@@ -38,6 +40,7 @@
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "typeorm": "^0.3.22",
     "vnpay": "^2.2.0"
