--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,18 +49,18 @@ services:
       retries: 5
     restart: unless-stopped
 
-  kibana:
-    container_name: kibana
-    image: docker.elastic.co/kibana/kibana:8.13.1
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-    ports:
-      - "5601:5601"
-    depends_on:
-      - elasticsearch
-    networks:
-      - app_network
-    restart: unless-stopped
+  # kibana:
+  #   container_name: kibana
+  #   image: docker.elastic.co/kibana/kibana:8.13.1
+  #   environment:
+  #     - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+  #   ports:
+  #     - "5601:5601"
+  #   depends_on:
+  #     - elasticsearch
+  #   networks:
+  #     - app_network
+  #   restart: unless-stopped
 
 networks:
   app_network:
